Fix SHOW PAPER COPY button, make ledger notices more visible

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -190,5 +190,10 @@
       }
     }
   }
+
+  .notice {
+    font-size: 1.4rem;
+    color: red;
+  }
 }
 
